[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Collision/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/HealthBar.gd" type="Script" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Collision/Hitbox.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 57.0351

[sub_resource type="CircleShape2D" id=10]
radius = 5.09902

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 1
playing = true
offset = Vector2( 0, -12 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BatCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="BatHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147483656

[node name="CollisionShape2D" parent="BatHurtbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 8 )

[node name="HealthBar" type="Line2D" parent="."]
position = Vector2( -5, -25 )
points = PoolVector2Array( 0, 0, 10, 0 )
width = 1.0
default_color = Color( 1, 0.4, 0.4, 1 )
script = ExtResource( 6 )

[node name="Stats" parent="HealthBar" instance=ExtResource( 5 )]
max_health = 3

[node name="HealthBarVisibilityTimer" type="Timer" parent="HealthBar"]

[node name="FlashTimer" type="Timer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="BatHitbox" parent="." instance=ExtResource( 8 )]
collision_mask = 32

[node name="CollisionShape2D" parent="BatHitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 10 )
[connection signal="area_entered" from="BatHurtbox" to="." method="_on_BatHurtbox_area_entered"]
[connection signal="health_changed" from="HealthBar/Stats" to="HealthBar" method="_on_Stats_health_changed"]
[connection signal="no_health" from="HealthBar/Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="HealthBar/HealthBarVisibilityTimer" to="HealthBar" method="_on_Timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]

[editable path="BatHurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="BatHitbox"]
